# tao

./: CHANGELOG.md  Cargo.toml
examples/: fullscreen.rs  request_redraw_threaded.rs
src/: error.rs  event.rs  event_loop.rs  icon.rs  window.rs
src/platform/: macos.rs  unix.rs
src/platform_impl/android/: mod.rs  ndk_glue.rs
src/platform_impl/ios/: app_state.rs  event_loop.rs  monitor.rs  view.rs  window.rs
src/platform_impl/linux/: device.rs  event_loop.rs  keyboard.rs  monitor.rs  taskbar.rs  util.rs  window.rs
src/platform_impl/linux/wayland/: header.rs
src/platform_impl/macos/: app.rs  app_delegate.rs  app_state.rs  dock.rs  event.rs  event_loop.rs  ffi.rs  icon.rs  mod.rs  monitor.rs  observer.rs  progress_bar.rs  view.rs  window.rs  window_delegate.rs
src/platform_impl/macos/util/: async.rs  cursor.rs  mod.rs
src/platform_impl/windows/: dark_mode.rs  drop_handler.rs  event_loop.rs  icon.rs  keyboard.rs  keyboard_layout.rs  monitor.rs  util.rs  window.rs  window_state.rs
src/platform_impl/windows/event_loop/: runner.rs
tao-macros/: Cargo.toml
tao-macros/src/: lib.rs
