[package]
name = "tao"
version = "0.34.0"
description = "Cross-platform window manager library."
authors = [ "Tauri Programme within The Commons Conservancy", "The winit contributors",]
edition = "2024"
keywords = [ "windowing",]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tauri-apps/tao"
documentation = "https://docs.rs/tao"
categories = [ "gui",]

[features]
default = [ "rwh_06", "x11",]
serde = [ "dep:serde", "dpi/serde",]
rwh_04 = [ "dep:rwh_04",]
rwh_05 = [ "dep:rwh_05",]
rwh_06 = [ "dep:rwh_06",]
x11 = [ "dep:gdkx11-sys", "dep:x11-dl",]

[dependencies]
lazy_static = "1.5.0"
libc = "1.0.0-alpha.1"
log = "0.4.28"
bitflags = "2.9.4"
crossbeam-channel = "0.5.15"
url = "2.5.7"
dpi = "0.1.2"

[dev-dependencies]
image = "0.25.8"
env_logger = "0.11.8"

[dependencies.serde]
version = "1.0.226"
optional = true
features = [ "serde_derive",]

[dependencies.rwh_04]
package = "raw-window-handle"
version = "0.4"
optional = true

[dependencies.rwh_05]
package = "raw-window-handle"
version = "0.5"
features = [ "std",]
optional = true

[dependencies.rwh_06]
package = "raw-window-handle"
version = "0.6"
features = [ "std",]
optional = true

[target."cfg(target_os = \"windows\")".dev-dependencies]
softbuffer = "0.4"

[target."cfg(target_os = \"windows\")".dependencies]
parking_lot = "0.12.4"
unicode-segmentation = "1.12.0"
windows-version = "0.1"
windows-core = "0.62"

[target."cfg(any(target_os = \"android\", target_os = \"windows\"))".dependencies]
once_cell = "1.21.3"

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21"
ndk = "0.9"
ndk-sys = "0.6"
ndk-context = "0.1"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
objc2 = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25"
dispatch = "0.2"
scopeguard = "1.2"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = "0.18"
gdkwayland-sys = "0.18.2"
parking_lot = "0.12.4"
dlopen2 = "0.8.0"

[target.x86_64-pc-windows-msvc.dependencies]
windows = "0.62.0"
windows-targets = "0.53.3"
windows_aarch64_msvc = "0.53.0"
windows_i686_msvc = "0.53.0"
windows_x86_64_msvc = "0.53.0"

[target.x86_64-apple-darwin.dependencies]
cocoa-foundation = "0.2.1"
objc2 = "0.6.2"
objc2-foundation = "0.3.1"

[target.x86_64-unknown-linux-gnu.dependencies]
libloading = "0.8.9"
x11-dl = "2.21.0"
xkbcommon = "0.9.0"

[target.aarch64-apple-ios.dependencies]
objc2-ui-kit = "0.3.1"

[target.aarch64-linux-android.dependencies]
jni = "0.21.1"
ndk = "0.9.0"
ndk-context = "0.1.1"
ndk-sys = "0.6.0"

[package.metadata.docs.rs]
features = [ "rwh_04", "rwh_05", "rwh_06", "serde", "x11",]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "i686-pc-windows-msvc", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin",]

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.62"
features = [ "Win32_Devices_HumanInterfaceDevice", "Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_DataExchange", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_SystemInformation", "Win32_UI_Accessibility", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_Input_Ime", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Pointer", "Win32_UI_Input_Touch", "Win32_UI_Shell", "Win32_UI_TextServices", "Win32_UI_WindowsAndMessaging",]

[target."cfg(target_os = \"android\")".dependencies.tao-macros]
version = "0.1.0"
git = "https://github.com/cyrup-ai/tao"

[target."cfg(target_os = \"macos\")".dependencies.objc2-foundation]
version = "0.3"
default-features = false
features = [ "std", "NSArray", "NSAttributedString", "NSAutoreleasePool", "NSDate", "NSDictionary", "NSEnumerator", "NSGeometry", "NSObjCRuntime", "NSRange", "NSString", "NSThread", "NSURL",]

[target."cfg(target_os = \"macos\")".dependencies.objc2-app-kit]
version = "0.3"
default-features = false
features = [ "std", "objc2-core-foundation", "NSApplication", "NSButton", "NSColor", "NSControl", "NSEvent", "NSGraphics", "NSImage", "NSOpenGLView", "NSPasteboard", "NSResponder", "NSRunningApplication", "NSScreen", "NSView", "NSWindow",]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies.gdkx11-sys]
version = "0.18"
optional = true

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies.x11-dl]
version = "2.21"
optional = true
